* expr.c (expand_expr, case VIEW_CONVERT_EXPR): Refine slightly 	and also support TREE_ADDRESSABLE. 	* tree.def (VIEW_CONVERT_EXPR): Document TREE_ADDRESSABLE.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47249 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+Wed Nov 21 17:37:16 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
+
+	* expr.c (expand_expr, case VIEW_CONVERT_EXPR): Refine slightly
+	and also support TREE_ADDRESSABLE.
+	* tree.def (VIEW_CONVERT_EXPR): Document TREE_ADDRESSABLE.
+
 2001-11-21  David Edelsohn  <edelsohn@gnu.org>
 
 	* rs6000.md (cmptf_internal1): Replace %$ with $.
