* tree-dump.c: Rename from c-dump.c. Include c-tree.h, not c-common.h. 	(lang_type_quals): Declare. 	(dequeue_and_dump): Use lang_hooks.tree_dump.type_quals function to 	retrieve language-specific qualifiers for a type node, instead of 	C_TYPE_QUALS. Likewise for lang_hooks.tree_dump.dump_tree instead of 	lang_dump_tree. 	* tree-dump.h: Rename from c-dump.h. 	* c-common.h (C_TYPE_QUALS): Removed. 	Move declarations for tree-dump.c interface to... 	* tree.h: ... here. Remove lang_dump_tree. 	* langhooks.h (struct lang_hooks_for_tree_dump): New. 	(struct lang_hooks): Add tree_dump hooks. 	* langhooks.c (lhd_tree_dump_dump_tree): New function. 	(lhd_tree_dump_type_quals): New function. 	* langhooks-def.h (lhd_tree_dump_dump_tree, lhd_tree_dump_type_quals): 	Declare. 	(LANG_HOOKS_INITIALIZER): Add tree_dump hooks. 	* Makefile.in: Move tree-dump.o to language-independent back-end.
cp:
	* cp-tree.h (CP_TYPE_QUALS): Removed.
	* decl.c (cxx_init_decl_processing): Don't set lang_dump_tree.
	* cp-lang.c: Set LANG_HOOKS_TREE_DUMP_DUMP_TREE_FN and
	LANG_HOOKS_TREE_DUMP_TYPE_QUALS_FN.
	* dump.c (cp_dump_tree): Use void* dump_info argument to match
	lang-hooks prototype.
	* call.c, cp-tree.h, cvt.c, decl.c, init.c, mangle.c, method.c, pt.c,
	rtti.c, semantics.c, tree.c, typeck.c, typeck2.c: All references to
	CP_TYPE_QUALS changed to cp_type_quals.
	* Make-lang.in: References to c-dump.h changed to tree-dump.h.
	(CXX_C_OBJS): Remove c-dump.o.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47257 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,24 @@
+2001-11-21  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* tree-dump.c: Rename from c-dump.c. Include c-tree.h, not c-common.h.
+	(lang_type_quals): Declare.
+	(dequeue_and_dump): Use lang_hooks.tree_dump.type_quals function to 
+	retrieve language-specific qualifiers for a type node, instead of 
+	C_TYPE_QUALS. Likewise for lang_hooks.tree_dump.dump_tree instead of 
+	lang_dump_tree.
+	* tree-dump.h: Rename from c-dump.h.
+	* c-common.h (C_TYPE_QUALS): Removed.
+	Move declarations for tree-dump.c interface to...
+	* tree.h: ... here. Remove lang_dump_tree.
+	* langhooks.h (struct lang_hooks_for_tree_dump): New.
+	(struct lang_hooks): Add tree_dump hooks.
+	* langhooks.c (lhd_tree_dump_dump_tree): New function.
+	(lhd_tree_dump_type_quals): New function.
+	* langhooks-def.h (lhd_tree_dump_dump_tree, lhd_tree_dump_type_quals):
+	Declare.
+	(LANG_HOOKS_INITIALIZER): Add tree_dump hooks.
+	* Makefile.in: Move tree-dump.o to language-independent back-end.
+
 2001-11-21  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* 1750a.h (DBX_REGISTER_NUMBER): Don't define.
