--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-20  Zack Weinberg  <zack@codesourcery.com>
+
+	* rs6000.c (output_cbranch): Use $, not %$, in output template.
+
 2001-11-21  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
 
 	* tree-dump.c: Rename from c-dump.c. Include c-tree.h, not c-common.h.
