Add necessary header files to tm_file for xscale-ecoff
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47261 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-22  Nick Clifton  <nickc@cambridge.redhat.com>
+
+	* config.gcc (xscale-coff): Add necessary header files to
+        tm_file variable.
+
 2001-11-20  Zack Weinberg  <zack@codesourcery.com>
 
 	* rs6000.c (output_cbranch): Use $, not %$, in output template.
