--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,8 @@
 2001-11-22  Nick Clifton  <nickc@cambridge.redhat.com>
 
+	* config/arm/arm.c (arm_elf_asm_named_section): Only build for elf
+	targets.
+
 	* config.gcc (xscale-coff): Add necessary header files to
         tm_file variable.
 
