--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,8 @@
 2001-11-22  Nick Clifton  <nickc@cambridge.redhat.com>
 
+	* doc/invoke.texi (M32R/D Option Summary): Document -m32r switch.
+	Fix typo -mm32rx=> -m32rx.
+
 	* config/arm/arm.c (arm_elf_asm_named_section): Only build for elf
 	targets.
 
