* config/i386/i386.md (leave, leave_rex64): Have RTL reflect what 	insn actually does.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47264 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -13714,8 +13714,8 @@
   "ix86_expand_epilogue (2); DONE;")
 
 (define_insn "leave"
-  [(set (reg:SI 7) (reg:SI 6))
-   (set (reg:SI 6) (mem:SI (pre_dec:SI (reg:SI 7))))
+  [(set (reg:SI 7) (plus:SI (reg:SI 6) (const_int 4)))
+   (set (reg:SI 6) (mem:SI (reg:SI 7)))
    (clobber (mem:BLK (scratch)))]
   "!TARGET_64BIT"
   "leave"
@@ -13727,8 +13727,8 @@
    (set_attr "ppro_uops" "few")])
 
 (define_insn "leave_rex64"
-  [(set (reg:DI 7) (reg:DI 6))
-   (set (reg:DI 6) (mem:DI (pre_dec:DI (reg:DI 7))))
+  [(set (reg:DI 7) (plus:DI (reg:DI 6) (const_int 4)))
+   (set (reg:DI 6) (mem:DI (reg:DI 7)))
    (clobber (mem:BLK (scratch)))]
   "TARGET_64BIT"
   "leave"
