--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Thu Nov 22 06:49:14 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
+
+	* config/i386/i386.md (leave, leave_rex64): Have RTL reflect what
+	insn actually does.
+
 2001-11-22  Nick Clifton  <nickc@cambridge.redhat.com>
 
 	* doc/invoke.texi (M32R/D Option Summary): Document -m32r switch.
