Fix for little endian ARMs
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47266 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-22  Nick Clifton  <nickc@cambridge.redhat.com>
+
+	* gcc.c-torture/execute/ieee/20000320-1.c: Fix patterns to work
+	for little endian ARMs.
+
 2001-11-20  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.c-torture/compile/20011119-1.c: New test.
