--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-23  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* predict.c, reg-stack.c: Fix spelling errors.
+
 2001-10-09  Andrew Haley  <aph@redhat.com>
 
 	* calls.c (check_sibcall_argument_overlap): Use slot_offset for
