* cris.h: Revert thinko in last patch.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47280 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-22  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* cris.h: Revert thinko in last patch.
+
 2001-11-23  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* ChangeLog.0, ChangeLog.2, ChangeLog.3, ChangeLog.4, ChangeLog,
