--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-23  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	* cppmacro.c (warn_of_redefinition): Warn regardless of -pedantic.
+	* gcc.dg/cpp/mi6.c, gcc.dg/cpp/redef2.c: Update.
+
 2001-11-22  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* cris.h: Revert thinko in last patch.
