--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2001-11-23  Nick Clifton  <nickc@cambridge.redhat.com>
+
+	* config/arm/xscale-coff.h (SUBTARGET_CPU_DEFAULT): Override
+	default definition.
+	(SUBTARGET_EXTRA_ASM_SPEC): Remove previous definition.
+	(MULTILIB_DEFAULTS): Remove previous definition.
+
 2001-11-23  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* cppmacro.c (warn_of_redefinition): Warn regardless of -pedantic.
