--- a/cfg-branch/gcc/doc/invoke.texi
+++ b/cfg-branch/gcc/doc/invoke.texi
@@ -278,7 +278,7 @@ in the following sections.
 -fschedule-insns  -fschedule-insns2 @gol
 -fsingle-precision-constant  -fssa -fssa-ccp -fssa-dce @gol
 -fstrength-reduce  -fstrict-aliasing  -fthread-jumps  -ftrapv @gol
--funroll-all-loops  -funroll-loops  @gol
+-funroll-all-loops  -funroll-loops  -fweb @gol
 --param @var{name}=@var{value}
 -O  -O0  -O1  -O2  -O3  -Os}
 
@@ -2902,19 +2902,19 @@ Here are the possible letters for use in @var{letters}, and their meanings:
 Annotate the assembler output with miscellaneous debugging information.
 @item b
 @opindex db
-Dump after computing branch probabilities, to @file{@var{file}.14.bp}.
+Dump after computing branch probabilities, to @file{@var{file}.15.bp}.
 @item B
 @opindex dB
-Dump after block reordering, to @file{@var{file}.28.bbro}.
+Dump after block reordering, to @file{@var{file}.29.bbro}.
 @item c
 @opindex dc
-Dump after instruction combination, to the file @file{@var{file}.16.combine}.
+Dump after instruction combination, to the file @file{@var{file}.17.combine}.
 @item C
 @opindex dC
-Dump after the first if conversion, to the file @file{@var{file}.17.ce}.
+Dump after the first if conversion, to the file @file{@var{file}.18.ce}.
 @item d
 @opindex dd
-Dump after delayed branch scheduling, to @file{@var{file}.31.dbr}.
+Dump after delayed branch scheduling, to @file{@var{file}.32.dbr}.
 @item D
 @opindex dD
 Dump all macro definitions, at the end of preprocessing, in addition to
@@ -2925,7 +2925,7 @@ Dump after SSA optimizations, to @file{@var{file}.04.ssa} and
 @file{@var{file}.07.ussa}.
 @item E
 @opindex dE
-Dump after the second if conversion, to @file{@var{file}.26.ce2}.
+Dump after the second if conversion, to @file{@var{file}.27.ce2}.
 @item f
 @opindex df
 Dump after life analysis, to @file{@var{file}.15.life}.
@@ -2940,10 +2940,10 @@ Dump after global register allocation, to @file{@var{file}.21.greg}.
 Dump after finalization of EH handling code, to @file{@var{file}.02.eh}.
 @item o
 @opindex do
-Dump after post-reload optimizations, to @file{@var{file}.22.postreload}.
+Dump after post-reload optimizations, to @file{@var{file}.23.postreload}.
 @item G
 @opindex dG
-Dump after GCSE, to @file{@var{file}.10.gcse}.
+Dump after GCSE, to @file{@var{file}.11.gcse}.
 @item i
 @opindex di
 Dump after sibling call optimizations, to @file{@var{file}.01.sibling}.
@@ -2958,17 +2958,17 @@ Dump after conversion from registers to stack, to @file{@var{file}.32.stack}.
 Dump after local register allocation, to @file{@var{file}.20.lreg}.
 @item L
 @opindex dL
-Dump after loop optimization, to @file{@var{file}.11.loop}.
+Dump after loop optimization, to @file{@var{file}.12.loop}.
 @item M
 @opindex dM
 Dump after performing the machine dependent reorganisation pass, to
-@file{@var{file}.30.mach}.
+@file{@var{file}.31.mach}.
 @item n
 @opindex dn
 Dump after register renumbering, to @file{@var{file}.25.rnreg}.
 @item N
 @opindex dN
-Dump after the register move pass, to @file{@var{file}.18.regmove}.
+Dump after the register move pass, to @file{@var{file}.19.regmove}.
 @item r
 @opindex dr
 Dump after RTL generation, to @file{@var{file}.00.rtl}.
@@ -2981,7 +2981,7 @@ Dump after CSE (including the jump optimization that sometimes follows
 CSE), to @file{@var{file}.08.cse}.
 @item S
 @opindex dS
-Dump after the first scheduling pass, to @file{@var{file}.19.sched}.
+Dump after the first scheduling pass, to @file{@var{file}.21.sched}.
 @item t
 @opindex dt
 Dump after the second CSE pass (including the jump optimization that
@@ -2994,7 +2994,7 @@ Dump after the second flow pass, to @file{@var{file}.23.flow2}.
 Dump after SSA dead code elimination, to @file{@var{file}.06.ssadce}.
 @item z
 @opindex dz
-Dump after the peephole pass, to @file{@var{file}.24.peephole2}.
+Dump after the peephole pass, to @file{@var{file}.25.peephole2}.
 @item a
 @opindex da
 Produce all the dumps listed above.
@@ -3024,6 +3024,9 @@ with @samp{r}.
 @opindex dy
 Dump debugging information during parsing, to standard error.
 @end table
+@item Z
+@opindex dZ
+Dump after web construction pass, to @file{@var{file}.10.web}.
 
 @item -fdump-unnumbered
 @opindex fdump-unnumbered
@@ -3218,8 +3221,8 @@ invoking @option{-O2} on programs that use computed gotos.
 @item -O3
 @opindex O3
 Optimize yet more.  @option{-O3} turns on all optimizations specified by
-@option{-O2} and also turns on the @option{-finline-functions} and
-@option{-frename-registers} options.
+@option{-O2} and also turns on the @option{-finline-functions}, @option{-fweb}
+and @option{-frename-registers} options.
 
 @item -O0
 @opindex O0
@@ -3829,6 +3832,15 @@ of registers left over after register allocation.  This optimization
 will most benefit processors with lots of registers.  It can, however,
 make debugging impossible, since variables will no longer stay in
 a ``home register''.
+
+@item -fweb
+@opindex fweb
+Constructs webs as commonly used for register allocation purposes and assign
+each web individual pseudo register. This allows our register allocation pass
+to operate on pseudos directly, but also strengthens several other optimization
+passes, such as CSE, loop optimizer and trivial dead code remover.  It can,
+however, make debugging impossible, since variables will no longer stay in a
+``home register''.
 
 @item --param @var{name}=@var{value}
 @opindex param
