--- a/libf2c/ChangeLog
+++ b/libf2c/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-23  Toon Moene  <toon@moene.indiv.nluug.nl>
+
+	PR libf2c/4930
+	* libF77/Makefile.in: Compile z_log.c with -ffloat-store.
+
 2001-11-16  John David Anglin  <dave@hiauly1.hia.nrc.ca>
 
 	* Makefile.in: Add MAKEOVERRIDES= to suppress exporting
