* gcc.c-torture/execute/ieee/20011123-1.c: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47295 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+Fri Nov 23 15:55:44 2001  Jeffrey A Law  (law@cygnus.com)
+
+	* gcc.c-torture/execute/ieee/20011123-1.c: New test.
+
 2001-11-23  Andreas Jaeger  <aj@suse.de>
 
 	* gcc.dg/cpp/charconst-2.c: New test.
