* Fix typo in cmptf pattern.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47297 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config/rs6000/rs6000.md
+++ b/gcc/config/rs6000/rs6000.md
@@ -9913,8 +9913,8 @@
 }")
 
 (define_expand "cmptf"
-  [(set (cc0) (compare (match_operand:DF 0 "gpc_reg_operand" "")
-		       (match_operand:DF 1 "gpc_reg_operand" "")))]
+  [(set (cc0) (compare (match_operand:TF 0 "gpc_reg_operand" "")
+		       (match_operand:TF 1 "gpc_reg_operand" "")))]
 
   "DEFAULT_ABI == ABI_AIX && TARGET_HARD_FLOAT && TARGET_LONG_DOUBLE_128"
   "
