--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-24  Toon Moene  <toon@moene.indiv.nluug.nl>
+
+	PR fortran/3957
+	* lang-specs.h: Correct !pipe conditional in tradcpp0 invocation.
+
 2001-11-21  Toon Moene  <toon@moene.indiv.nluug.nl>
 
 	* g77.texi: egcs was not a `@command'.
