--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-25  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* g++.dg/abi/vbase8-4.C: New test.
+
 2001-11-24  Ian Lance Taylor  <ian@airs.com>
 
 	* gcc.c-torture/execute/20011121-1.c: New test.
