2001-11-25  Toon Moene  <toon@moene.indiv.nluug.nl>
	* libF77/Makefile.in: Fix non-portable use of `$<' in z_log.c's rule.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47328 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libf2c/ChangeLog
+++ b/libf2c/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-25  Toon Moene  <toon@moene.indiv.nluug.nl>
+
+	* libF77/Makefile.in: Fix non-portable use of `$<' in z_log.c's rule.
+
 2001-11-23  Toon Moene  <toon@moene.indiv.nluug.nl>
 
 	PR libf2c/4930
