Fix for PR libgcj/4583: 	* java/math/BigDecimal.java (BigDecimal(double)): Rewrote. 	(BigDecimal(String)): Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47329 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,9 @@
+2001-11-25  Tom Tromey  <tromey@redhat.com>
+
+	Fix for PR libgcj/4583:
+	* java/math/BigDecimal.java (BigDecimal(double)): Rewrote.
+	(BigDecimal(String)): Likewise.
+
 2001-11-19  Tom Tromey  <tromey@redhat.com>
 
 	* verify.cc (_Jv_BytecodeVerifier::branch_prepass) [op_iinc]:
