--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-25  Aldy Hernandez  <aldyh@redhat.com>
+
+	* regclass.c (choose_hard_reg_mode): Handle vector arguments.
+
 2001-11-26  Alan Modra  <amodra@bigpond.net.au>
 
 	* final.c: (insn_lengths): Make it an int *, so that large jump
